Improve how keyword grouping is done when applying them
Multiple ordered groups are now possible. This also fixes the unevaluatedItems
and unevaluatedProperties keywords needing to be applied after items
and properties.